@@ -1,3 +1,5 @@
+fixed notifyNewMessagesMain and Node so that they actually work.
+
 added a button for using custom headers on an outgoing mail message.
 
 fixed editor display of boolean properties in Folder editor.
